helm/authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.umhomelab.com`) || Host(`www.auth.umhomelab.com`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: 80
  tls: {}
